# RustMyDetection

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs
Executable/Version_1/: facture_free.md
Executable/Version_2/: facture_netflix.md
Hope/Version_1/: Readme.md  facture_application.evtx  facture_aurora.json  facture_free.md  facture_fw_adv.evtx  facture_powsershell_ope.evtx  facture_sysmon.evtx  facture_system.evtx
resource/ps_ad/: reco_base64.txt  reco_obfus.txt  reco_orginal.txt
src/: escape.rs  main.rs  persistance.rs  tools.rs  upload.rs
src/payload/: adfind.cmd
