[package]
name = "rustmydetection"
version = "1.0.0"
authors = ["frack113"]
edition = "2021"

build = "build.rs"

[build-dependencies]
winres = "0.1"
winapi = {version = "0.3.9",  features = ["winnt"]}

[dependencies]
winreg = "0.50"
reqwest = { version = "0.11.16", features = ["blocking","multipart"]}
serde_json = "1.0"
rand = "0.8.5"
winapi = {version = "0.3.9", features = ["processthreadsapi","winnt","winbase","minwindef","impl-default", "heapapi","basetsd"]}
sysinfo = "0.28.4"